refactor: Resolve PMD Code Quality findings in ATS