@@ -12,14 +12,21 @@ package org.eclipse.osee.ats.artifact;
 
 import static org.eclipse.osee.framework.jdk.core.util.Strings.intern;
 import java.text.SimpleDateFormat;
+import java.util.ArrayList;
 import java.util.Date;
+import java.util.List;
+import java.util.Locale;
 import java.util.logging.Level;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import org.eclipse.osee.ats.artifact.ATSLog.LogType;
 import org.eclipse.osee.ats.internal.AtsPlugin;
 import org.eclipse.osee.framework.core.data.SystemUser;
 import org.eclipse.osee.framework.core.exception.OseeCoreException;
 import org.eclipse.osee.framework.core.exception.UserNotInDatabase;
+import org.eclipse.osee.framework.jdk.core.util.AXml;
 import org.eclipse.osee.framework.jdk.core.util.DateUtil;
+import org.eclipse.osee.framework.jdk.core.util.Strings;
 import org.eclipse.osee.framework.logging.OseeLog;
 import org.eclipse.osee.framework.skynet.core.User;
 import org.eclipse.osee.framework.skynet.core.UserManager;
@@ -35,18 +42,42 @@ public class LogItem {
    private User user;
    private LogType type = LogType.None;
    private final String userId;
+   private final static Pattern LOG_ITEM_PATTERN =
+      Pattern.compile("<Item date=\"(.*?)\" msg=\"(.*?)\" state=\"(.*?)\" type=\"(.*?)\" userId=\"(.*?)\"/>");
+   private final static Pattern LOG_ITEM_TAG_PATTERN = Pattern.compile("<Item ");
 
-   public String getUserId() {
-      return userId;
+   public static List<LogItem> getLogItems(String xml, String id) throws OseeCoreException {
+      List<LogItem> logItems = new ArrayList<LogItem>();
+      if (!xml.isEmpty()) {
+         Matcher m = LOG_ITEM_PATTERN.matcher(xml);
+         while (m.find()) {
+            LogItem item =
+               new LogItem(m.group(4), m.group(1), Strings.intern(m.group(5)), Strings.intern(m.group(3)), // NOPMD by b0727536 on 9/29/10 8:52 AM
+                  AXml.xmlToText(m.group(2)), id);
+            logItems.add(item);
+         }
+
+         Matcher m2 = LOG_ITEM_TAG_PATTERN.matcher(xml);
+         int openTagsFound = 0;
+         while (m2.find()) {
+            openTagsFound++;
+         }
+         if (logItems.size() != openTagsFound) {
+            OseeLog.log(AtsPlugin.class, Level.SEVERE, String.format(
+               "ATS Log: open tags found %d doesn't match log items parsed %d for %s", openTagsFound, logItems.size(),
+               id));
+         }
+      }
+      return logItems;
    }
 
    public LogItem(LogType type, Date date, User user, String state, String msg, String hrid) throws OseeCoreException {
-      this(type.name(), date.getTime() + "", user.getUserId(), state, msg, hrid);
+      this(type.name(), String.valueOf(date.getTime()), user.getUserId(), state, msg, hrid);
    }
 
    public LogItem(LogType type, String date, String userId, String state, String msg, String hrid) throws OseeCoreException {
-      Long l = new Long(date);
-      this.date = new Date(l.longValue());
+      Long dateLong = Long.valueOf(date);
+      this.date = new Date(dateLong.longValue());
       this.msg = msg;
       this.state = intern(state);
       this.userId = intern(userId);
@@ -65,7 +96,7 @@ public class LogItem {
    }
 
    public String toXml() throws OseeCoreException {
-      return "<type>" + type.name() + "</type><date>" + date.getTime() + "</date><user>" + user.getUserId() + "</user><state>" + (state != null ? state : "") + "</state><msg>" + (msg != null ? msg : "") + "</msg>";
+      return "<type>" + type.name() + "</type><date>" + date.getTime() + "</date><user>" + user.getUserId() + "</user><state>" + (state == null ? "" : state) + "</state><msg>" + (msg == null ? "" : msg) + "</msg>";
    }
 
    public Date getDate() {
@@ -74,13 +105,17 @@ public class LogItem {
 
    public String getDate(String pattern) {
       if (pattern != null) {
-         return new SimpleDateFormat(pattern).format(date);
+         return new SimpleDateFormat(pattern, Locale.US).format(date);
       }
       return date.toString();
    }
 
    public void setDate(Date date) {
       this.date = date;
+   }
+
+   public String getUserId() {
+      return userId;
    }
 
    public String getMsg() {
@@ -93,11 +128,20 @@ public class LogItem {
 
    @Override
    public String toString() {
-      try {
-         return (msg.equals("") ? "" : msg) + " (" + type + ") " + (state.equals("") ? "" : "from " + state + " ") + "by " + user.getUserId() + " on " + DateUtil.getMMDDYYHHMM(date) + "\n";
-      } catch (Exception ex) {
-         return (msg.equals("") ? "" : msg) + " (" + type + ") " + (state.equals("") ? "" : "from " + state + " ");
-      }
+      return String.format("%s (%s)%s by %s on %s", getToStringMsg(), type, getToStringState(), getToStringUser(),
+         DateUtil.getMMDDYYHHMM(date));
+   }
+
+   private String getToStringUser() {
+      return user == null ? "unknown" : user.getName();
+   }
+
+   private String getToStringState() {
+      return state.isEmpty() ? "" : "from " + state;
+   }
+
+   private String getToStringMsg() {
+      return msg.isEmpty() ? "" : msg;
    }
 
    public User getUser() {
